# OpenGlTest

./: .gitignore  CMakeLists.txt
res/shaders/: color-3d.vert  color.frag  tex-3d.vert  tex.frag  tex_mix.frag  tex_refract.frag
src/: main.cpp
src/engine/: Camera.cpp  Camera.hpp
src/engine/graphics/: Texture.cpp  Texture.hpp  TextureMixingMode.hpp
src/engine/io/: EventManager.cpp  EventManager.hpp  Window.cpp  Window.hpp
src/engine/math/: AxisAngle.cpp  AxisAngle.hpp  Mat2.cpp  Mat2.hpp  Mat3.cpp  Mat3.hpp  Mat4.cpp  Mat4.hpp  Quaternion.cpp  Quaternion.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp
src/engine/object/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Renderable.hpp
src/engine/render/: RenderHelper.cpp  RenderHelper.hpp  Shader.cpp  Shader.hpp
